<?xml version="1.0"?>
<package format="3">
  <name>lioamm_localizer</name>
  <version>0.0.0</version>
  <description>The lioamm_localizer package</description>
  <maintainer email="ryu.yamamoto@tier4.jp">RyuYamamoto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>lioamm_localizer_common</depend>
  <depend>global_optimizer</depend>
  <depend>lidar_inertial_odometry</depend>
  <depend>lioamm_localizer_msgs</depend>
  <depend>map_loader</depend>
  <depend>global_initializer</depend>

  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

