<?xml version="1.0"?>
<package format="3">
  <name>lioamm_localizer_common</name>
  <version>0.0.0</version>
  <description>The lioamm_localizer_common package</description>

  <maintainer email="ryu.yamamoto@tier4.jp">RyuYamamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sdt_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
